<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90"
    tools:context=".Activites.SettingsPage">


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="68dp"
        android:layout_height="15dp"
        android:text="userName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextUserName"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/Savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="save"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSetting"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp" />

    <ImageView
        android:id="@+id/arrowImageSetting"
        android:layout_width="61dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarSetting"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Spinner
        android:id="@+id/teamlist"
        android:layout_width="277dp"
        android:layout_height="28dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>