<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90"
    tools:context=".Activites.MainActivity">

    <Button
        android:id="@+id/ADDTASK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewId"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ALLTASKS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toEndOf="@+id/ADDTASK"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="My Tasks"
        app:layout_constraintBottom_toTopOf="@+id/buttonsub2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.76"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonsub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/subject1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonsub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/subject2"
        app:layout_constraintEnd_toStartOf="@id/buttonsub3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/buttonsub1"
        app:layout_constraintTop_toBottomOf="@id/textView10"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonsub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/subject3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@id/buttonsub2"
        app:layout_constraintTop_toBottomOf="@id/textView10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:hint="@string/your_user_name"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="61dp"
        android:contentDescription="@string/imageview"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsub1"
        app:layout_constraintVertical_bias="0.755"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/_661253918_tasks__1_" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="415dp"
        android:layout_height="90dp"
        android:background="?attr/colorPrimaryDark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="TaskMaster"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/settingID"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:background="@color/cardview_light_background"
        android:backgroundTint="#9C27B0"
        android:text="setting"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTitle"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewId"
        android:layout_width="464dp"
        android:layout_height="225dp"
        android:background="@android:color/holo_purple"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/teamMain"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/your_team_names"
        android:text="@string/team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/TaskAppLoginButton"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:text="@string/Log_In"
        app:layout_constraintBottom_toTopOf="@+id/TaskAppLogoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/TaskAppLogoutButton"
        android:layout_width="112dp"
        android:layout_height="37dp"
        android:layout_marginTop="53dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/settingID"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain" />


</androidx.constraintlayout.widget.ConstraintLayout>