...
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/addactivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_dynamic_neutral90"
    tools:context=".Activites.ADDTASK">


...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="57dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:text="@string/add_Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
...
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="-1dp" />

    <ImageView
        android:id="@+id/arrowImage2"
        android:layout_width="61dp"
        android:layout_height="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.64"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerlsitforState"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginBottom="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
...
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerlsitforState"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/addteam"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
...
